[package]
name = "readpcap"
version = "0.1.0"
authors = ["Joonas Koivunen <joonas.koivunen@gmail.com>"]

[lib]

[dependencies]
byteorder = "1"
tokio-io = "*"
bytes = "*"

[[example]]
name = "read-eventstore_tcp-pcap"
path = "examples/read-eventstore_tcp-pcap.rs"

[dev-dependencies]
eventstore-tcp = { git = "https://github.com/koivunej/eventstore-tcp.git" }
